complete to setup firebase to store data

--- a/component/index.html
+++ b/component/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-     
+        div:nth-child(1){
+            background-color: red;
+            border: 2px solid black;
+            height: 100px;
+            width: 100px;
+            outline: 20px green;
+            outline-offset: 10px;
+            outline-width: thick;
+            outline-color: blue;
+            box-shadow: 5px 5px 2px;
+        }
     </style>
 </head>
+
 <body>
-   
+    <div class="cont">this is div</div>
+    <div class="cont">this is div</div>
+    <div class="cont">this is div</div>
 </body>
+<script>
+    navigator.serviceWorker.register("<h1>hello ibkram </h1>")
+</script>
 </html>
